# audiobook-harness

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.smoke  Dockerfile.verify  LICENSE  NOTICE  README.md  SECURITY.md  models.lock.json  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  MODEL_ATTRIBUTION.md  PERFORMANCE.md  PRODUCTION_WALKTHROUGH.md  QUALITY.md  SETUP.md
docs/assets/workflow-frames/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
scripts/: build_workflow_gif.sh  docker-verify-offline.sh  run  setup.py  test-harness.sh
skills/audiobook-harness/: SKILL.md
src/audiobook_harness/: __init__.py  analysis.py  asr_cache.py  cli.py  context_protocol.py  performance.py  project.py  pronunciation.py  quality.py  run_journal.py  selection_integrity.py  status.py  tts.py
templates/project/: lexicon.json  project.yaml
templates/project/source/: chapter-01.txt
tests/: test_candidate_selection_integrity.py  test_performance.py  test_project.py  test_quality.py  test_run_journal.py  test_stage.py
