[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "audiobook-harness"
version = "0.1.0"
description = "Local-first, evidence-based audiobook production with Kokoro."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [{name = "Audiobook Harness contributors"}]
dependencies = [
  "kokoro-onnx==0.5.0",
  "numpy>=1.26,<3",
  "soundfile>=0.12,<1",
  "scipy>=1.12,<2",
  "rapidfuzz>=3.9,<4",
  "pyyaml>=6.0,<7",
  "openai-whisper>=20240930",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6,<1"]

[project.scripts]
audiobook-harness = "audiobook_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audiobook_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
