[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "audiobook-harness"
version = "0.1.0"
description = "Local-first, evidence-based audiobook production with Kokoro."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [{name = "Audiobook Harness contributors"}]
dependencies = [
  "kokoro-onnx==0.5.0",
  "numpy==2.4.6",
  "soundfile==0.14.0",
  "scipy==1.18.0",
  "rapidfuzz==3.14.5",
  "pyyaml==6.0.3",
]

[project.optional-dependencies]
# Keep ASR optional: analysis and the explicit no-model onboarding path should
# not pull a multi-gigabyte PyTorch stack before the user requests verification.
verification = ["openai-whisper==20250625"]
dev = ["pytest==8.4.2", "ruff==0.15.22"]

[project.scripts]
audiobook-harness = "audiobook_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audiobook_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
